Avant retour vers la version dde configuration de cors